--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="boundary.js"></script>
   <script language="javascript" type="text/javascript" src="neuralNetwork.js"></script>
+  <script language="javascript" type="text/javascript" src="ga.js"></script>
 
   <script language="javascript" type="text/javascript" src="particle.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
