--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.1.0/dist/tf.min.js"></script>
-  <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
   <script language="javascript" type="text/javascript" src="boundary.js"></script>
   <script language="javascript" type="text/javascript" src="neuralNetwork.js"></script>
